# rubber-duck

./: .gitignore  Readme.md  chat_test.py  config.json  discord_bot.py  discord_bot2.py  discord_bot3.py  discord_bot4.py  gpt_duck.py  hard-restart.sh  kill.sh  pyproject.toml  restart.sh  spawn.sh
new-convos/: 927616651409649675_1090044563667820564.json
prompts/: alex-homework-1a.txt  alex-homework-1c.txt  chat-gpt.txt  duck-pond.txt  gpt4.txt  hw1-alex.txt  max-homework-1a.txt  max-homework-1b.txt  unit 1.txt
prompts/unit-1/: alex-homework-1a.txt  alex-homework-1c.txt  homework-1a.txt  max-homework-1c.txt  project-1-bit.txt  unit-1.txt
prompts/unit-2/: homework-2a.txt  homework-2b.txt  homework-2c.txt  homework-2d.txt  matt-homework-2b.txt  project-2.txt
prompts/unit-3/: homework-3a.txt  homework-3b.txt  homework-3c.txt  homework-3d.txt  homework-3e.txt  homework-3f.txt  project-3.txt
prompts/unit-4/: homework4a.txt  homework4b.txt  homework4c.txt  homework4d.txt  homework4e.txt  homework4f.txt  project-4.txt
prompts/unit-5/: homework5a.txt  homework5b.txt  homework5c.txt  homework5d.txt  project-5.txt
prompts/unit-6/: homework6a.txt  homework6b.txt
