[tool.poetry]
name = "rubber_duck"
version = "0.1.0"
description = ""
authors = ["Gordon Bean <gbean@cs.byu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.2"
discord = "^2.1.0"
psutil = "^5.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

